# vnt-tauri-client

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
docs/: ios-system-vpn.md
scripts/: release-next.mjs
vnt/: .gitignore  README.md
vnt-tauri-client/: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
vnt-tauri-client/scripts/: assert-ios-packet-tunnel.mjs  generate-icon.ps1  patch-ios-vpn.mjs
vnt-tauri-client/src/: App.tsx  index.css  types.ts
vnt-tauri-client/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
vnt-tauri-client/src-tauri/.cargo/: config.toml
vnt-tauri-client/src-tauri/binaries/: README.md
vnt-tauri-client/src-tauri/capabilities/: default.json
vnt-tauri-client/src-tauri/ios/: PacketTunnelProvider.swift  VntIosVpnBridge.swift
vnt-tauri-client/src-tauri/ios-template/: project.yml
vnt-tauri-client/src-tauri/patches/machine-uid/: Cargo.toml
vnt-tauri-client/src-tauri/patches/machine-uid/src/: lib.rs
vnt-tauri-client/src-tauri/src/: ios_packet_flow.rs  ios_vpn.rs  lib.rs  main.rs
vnt-tauri-client/src-tauri/src/embedded/: config.rs  manager.rs  mod.rs  overview.rs  platform.rs  preview.rs  wintun.rs
vnt-tauri-client/src/components/: BottomNav.tsx  HomeTab.tsx  NetworkTab.tsx  SettingsTab.tsx
vnt-tauri-client/src/lib/: clipboard.ts  vntApi.ts
vnt/.cargo/: config.toml
vnt/.github/workflows/: rust.yml
vnt/vnt-core/src/: lib.rs
vnt/vnt-core/src/core/: mod.rs
vnt/vnt-core/src/tun/: general.rs
(+1 files in other folders)
